- small fixes - coverage with test not supported objects